{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 153,
  "lineage": "c08cebe8-1663-6c68-b54d-cf0193a7e97d",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-049442a6cf8319180",
            "arn": "arn:aws:ec2:eu-west-1:458329143143:instance/i-0adbbb306f2895acd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adbbb306f2895acd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Obelion-Cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e15b9feea25cc938"
              }
            ],
            "primary_network_interface_id": "eni-0e15b9feea25cc938",
            "private_dns": "ip-10-0-2-19.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.19",
            "public_dns": "ec2-18-203-222-145.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.222.145",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "Backend-volume"
                },
                "tags_all": {
                  "Name": "Backend-volume"
                },
                "throughput": 125,
                "volume_id": "vol-07c63a5e5fb3a34dd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0546639d3f7dcc440"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a99977b01fab4426",
            "tags": {
              "Name": "Backend"
            },
            "tags_all": {
              "Name": "Backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0546639d3f7dcc440"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "i-0adbbb306f2895acd",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.instances.aws_key_pair.Obelion-Cloud-key",
            "module.instances.tls_private_key.Obelion-Cloud-key",
            "module.security_groups.aws_security_group.backend_sg",
            "module.subnet.aws_subnet.public_B",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-049442a6cf8319180",
            "arn": "arn:aws:ec2:eu-west-1:458329143143:instance/i-01e43a1c5aa783c06",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e43a1c5aa783c06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Obelion-Cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a39864ae009eb55"
              }
            ],
            "primary_network_interface_id": "eni-06a39864ae009eb55",
            "private_dns": "ip-10-0-1-104.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-54-194-116-151.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.116.151",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "Frontend-volume"
                },
                "tags_all": {
                  "Name": "Frontend-volume"
                },
                "throughput": 125,
                "volume_id": "vol-03e28c59ee15cb002",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01424db5586e25035"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060cf1317766dc8d5",
            "tags": {
              "Name": "Frontend"
            },
            "tags_all": {
              "Name": "Frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01424db5586e25035"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "i-01e43a1c5aa783c06",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.instances.aws_key_pair.Obelion-Cloud-key",
            "module.instances.tls_private_key.Obelion-Cloud-key",
            "module.security_groups.aws_security_group.frontend_sg",
            "module.subnet.aws_subnet.public_A",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:network-acl/acl-004854e9201fc6e90",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-004854e9201fc6e90",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "subnet_ids": [
              "subnet-00d9cb0fce7850bc8",
              "subnet-0ef44de4343681ca7"
            ],
            "tags": {
              "Name": "Private-NACL"
            },
            "tags_all": {
              "Name": "Private-NACL"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_subnet.private_A",
            "module.subnet.aws_subnet.private_B",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:network-acl/acl-0e374cd1e9c3bf27b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e374cd1e9c3bf27b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "subnet_ids": [
              "subnet-060cf1317766dc8d5",
              "subnet-0a99977b01fab4426"
            ],
            "tags": {
              "Name": "Public-NACL"
            },
            "tags_all": {
              "Name": "Public-NACL"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_subnet.public_A",
            "module.subnet.aws_subnet.public_B",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:route-table/rtb-07ce98a60e68a04bc",
            "id": "rtb-07ce98a60e68a04bc",
            "owner_id": "458329143143",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "rtb-07ce98a60e68a04bc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:route-table/rtb-023e3994fdb09288f",
            "id": "rtb-023e3994fdb09288f",
            "owner_id": "458329143143",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063ed4403d38a5b58",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "rtb-023e3994fdb09288f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Obelion-Cloud_IGW",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3c9c8872474c9f7",
            "region": "eu-west-1",
            "route_table_id": "rtb-07ce98a60e68a04bc",
            "subnet_id": "subnet-00d9cb0fce7850bc8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private_A",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e258bb0e535824",
            "region": "eu-west-1",
            "route_table_id": "rtb-07ce98a60e68a04bc",
            "subnet_id": "subnet-0ef44de4343681ca7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.private_rt",
            "module.subnet.aws_subnet.private_B",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b774af97a8692217",
            "region": "eu-west-1",
            "route_table_id": "rtb-023e3994fdb09288f",
            "subnet_id": "subnet-060cf1317766dc8d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_A",
            "module.vpc.aws_internet_gateway.Obelion-Cloud_IGW",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049644bf3adf369a7",
            "region": "eu-west-1",
            "route_table_id": "rtb-023e3994fdb09288f",
            "subnet_id": "subnet-0a99977b01fab4426"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table.aws_route_table.public_rt",
            "module.subnet.aws_subnet.public_B",
            "module.vpc.aws_internet_gateway.Obelion-Cloud_IGW",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:security-group/sg-0546639d3f7dcc440",
            "description": "Security Group for Backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTP traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow outbound MySQL traffic from backend to Database Security Group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04395a855e2452403"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0546639d3f7dcc440",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH traffic from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound HTTP traffic from Frontend Security Group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01424db5586e25035"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "sg-0546639d3f7dcc440",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:security-group/sg-04395a855e2452403",
            "description": "Security Group for Database",
            "egress": [],
            "id": "sg-04395a855e2452403",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound MySQL traffic from Backend Security Group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0546639d3f7dcc440"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "sg-04395a855e2452403",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:security-group/sg-01424db5586e25035",
            "description": "Security Group for Frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTP traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01424db5586e25035",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH traffic from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend_sg",
            "name_prefix": "",
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "sg-01424db5586e25035",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_traffic_from_the_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound MySQL traffic from Backend Security Group",
            "from_port": 3306,
            "id": "sgrule-529719784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-04395a855e2452403",
            "security_group_rule_id": "sgr-0c77a5ae3226a2bd3",
            "self": false,
            "source_security_group_id": "sg-0546639d3f7dcc440",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.database_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-2714418469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-1",
            "security_group_id": "sg-0546639d3f7dcc440",
            "security_group_rule_id": "sgr-069e57afdbe76b4ef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound HTTP traffic from Frontend Security Group",
            "from_port": 80,
            "id": "sgrule-1488095358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0546639d3f7dcc440",
            "security_group_rule_id": "sgr-0df1fdd3b2323367e",
            "self": false,
            "source_security_group_id": "sg-01424db5586e25035",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.frontend_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound SSH traffic from anywhere",
            "from_port": 22,
            "id": "sgrule-1078579240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0546639d3f7dcc440",
            "security_group_rule_id": "sgr-05fff2c562e27eed8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound MySQL traffic from backend to Database Security Group",
            "from_port": 3306,
            "id": "sgrule-711733392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-0546639d3f7dcc440",
            "security_group_rule_id": "sgr-0f4917dbca281d673",
            "self": false,
            "source_security_group_id": "sg-04395a855e2452403",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.database_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-1469377689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-west-1",
            "security_group_id": "sg-01424db5586e25035",
            "security_group_rule_id": "sgr-0cd25a831922c78e1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTP traffic from anywhere",
            "from_port": 80,
            "id": "sgrule-63463436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-01424db5586e25035",
            "security_group_rule_id": "sgr-0e7e50f25ab7f3ceb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound SSH traffic from anywhere",
            "from_port": 22,
            "id": "sgrule-3041017273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-1",
            "security_group_id": "sg-01424db5586e25035",
            "security_group_rule_id": "sgr-07e2222736899d27d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.frontend_sg",
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:subnet/subnet-00d9cb0fce7850bc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d9cb0fce7850bc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458329143143",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "private-subnet-A"
            },
            "tags_all": {
              "Name": "private-subnet-A"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "subnet-00d9cb0fce7850bc8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:subnet/subnet-0ef44de4343681ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef44de4343681ca7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "458329143143",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "private-subnet-B"
            },
            "tags_all": {
              "Name": "private-subnet-B"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "subnet-0ef44de4343681ca7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:subnet/subnet-060cf1317766dc8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060cf1317766dc8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458329143143",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "public-subnet-A"
            },
            "tags_all": {
              "Name": "public-subnet-A"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "subnet-060cf1317766dc8d5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:subnet/subnet-0a99977b01fab4426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99977b01fab4426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "458329143143",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "public-subnet-B"
            },
            "tags_all": {
              "Name": "public-subnet-B"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "subnet-0a99977b01fab4426",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Obelion-Cloud_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:internet-gateway/igw-063ed4403d38a5b58",
            "id": "igw-063ed4403d38a5b58",
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "tags": {
              "Name": "Obelion-Cloud_IGW"
            },
            "tags_all": {
              "Name": "Obelion-Cloud_IGW"
            },
            "vpc_id": "vpc-0ae97f399c1d3a2ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.Obelion-Cloud-app_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Obelion-Cloud-app_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:458329143143:vpc/vpc-0ae97f399c1d3a2ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbd05a2646cbde6b",
            "default_route_table_id": "rtb-0d785212b89e96548",
            "default_security_group_id": "sg-05a55d7a124fb9af4",
            "dhcp_options_id": "dopt-04a22e1383b9cb69a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae97f399c1d3a2ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d785212b89e96548",
            "owner_id": "458329143143",
            "region": "eu-west-1",
            "tags": {
              "Name": "Obelion-Cloud-app_VPC"
            },
            "tags_all": {
              "Name": "Obelion-Cloud-app_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "458329143143",
            "id": "vpc-0ae97f399c1d3a2ec",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}